[metadata]
name = geohash
version = 0.1
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/geohash
description="A geohash tool with CSV interface",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = geohash
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    python-geohash

[options.entry_points]
console_scripts =
    geohash = src.__init__:main

[options.extras_require]
dev =
    black
    flake8
    pytest

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503
